EDSC-1807: PR feedback updates: fixed button wrap edge case with large granule count; added icons to granule filter and detail links; Added button hover transition; Removed extra meta data reporting button; Removed errant button style on project hide visualizations link.

--- a/app/assets/stylesheets/modules/media_queries.css.scss
+++ b/app/assets/stylesheets/modules/media_queries.css.scss
@@ -40,10 +40,10 @@
 /* Download button container sizing */
 @media (min-width: 1440px) {
 	.master-overlay header .collection-title-filters {
-		width: 80%;
+		width: 77%;
 	}
 
 	.master-overlay-global-actions {
-		width: 18%;
+		width: 22%;
 	}
 }
